<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Paurakh Saud</string>
    <string name="logo">logo of the app</string>
    <string name="all_the_right_are_reserved_by_paurakh_saud">All the Right are Reserved by Paurakh Saud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myPhoto">This is my photo</string>
    <string name="paurakh_saud">Paurakh Saud</string>
    <string name="age_19">Age : 19</string>
    <string name="mobile_app_developer">Mobile App Developer</string>
    <string name="myBIo">Hello, My name is Paurakh saud, and I am a second-year student at Islington college. I am currently studying Mobile Application Development, with an emphasis on app development.I have always had a passion for web apps and mobile apps. After one year my coding has become more refined and polished. I have been able to apply what I’ve learned by myself to motivate me to learn more effectively and convey my ideas more clearly. My goal is to eventually be able to code professionally and publish a app in Play Store.</string>
    <string name="hire_me">Hire me</string>
    <string name="my_cv">My CV</string>
    <string name="this_is_scrollviewInContactPage">this is scrollViewInContactPage</string>
    <string name="this_is_scrollViewInContactPage">this_is_scrollviewInContactPage</string>
    <string name="arrowButton">ArrowButton</string>
    <string name="contact_me">Contact Me</string>
    <string name="illustrtion_contact">illustrtion_contact</string>
    <string name="call_me">Call me</string>
    <string name="email_me">Email me</string>
    <string name="name">Name :</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="your_message">Your Message........</string>
    <string name="message">Message :</string>
    <string name="email">Email :</string>
    <string name="_2_offers">2 Offers</string>
    <string name="_1_clint">1 Clint</string>
    <string name="_16_github_repo">16 Github Repo</string>
    <string name="send">Send</string>
    <string name="next">NEXT</string>
    <string name="welcome_to_my_application">Welcome To My Application</string>
    <string name="First_image_of_intro">First image of the intro</string>
    <string name="third_image_of_intro">Third_image_of_intro</string>
    <string name="back">Back</string>
    <string name="second_image_of_intro">second_image_of_intro</string>
    <string name="done">Done</string>
    <string name="mySkill_scrollView">" This is scrollView in mySkill"</string>
    <string name="this_is_the_profile_picture">This is the profile picture</string>
    <string name="skill">My Skill</string>
    <string name="my_skills">My Skills</string>
    <string name="_1_soft_skills">1. Soft Skills</string>
    <string name="_2_programming_skills">2. Programming Skills</string>
    <string name="conversion">Conversion</string>
    <string name="creativity">Creativity</string>
    <string name="critical_thinking">Critical Thinking</string>
    <string name="teamwork">Teamwork</string>
    <string name="java">Java</string>
    <string name="flutter">Flutter</string>
    <string name="c_sharp">C- Sharp</string>
    <string name="swift">Swift</string>
    <string name="html_css_and_javascript">HTML, CSS And Javascript</string>
    <string name="wanna_play_game" tools:ignore="Typos">Wanna Play Game ?</string>
    <string name="taptoplay">X\'s Turn - Tap to play</string>
    <string name="welcome_to_tic_tac_toe">Welcome to Tic Tac Toe</string>
    <string name="this_is_grid">This is grid</string>
    <string name="oturn">O\'s Turn - Tap to play</string>
    <string name="xturn">X\'s Turn - Tap to play</string>
    <string name="x_wins">X Wins</string>
    <string name="_7thbox">7thBOx</string>
    <string name="ninthbox">NinthBOx</string>
    <string name="eightBox">eightBox</string>
    <string name="_6th_box">6th box</string>
    <string name="_5th_box">5th Box</string>
    <string name="_4th_box">4th box</string>
    <string name="_3rd_box">3rd Box</string>
    <string name="_2nd_box">2nd Box</string>
    <string name="_1st_box">1st Box</string>
    <string name="this_is_scrollviewincontactpage">this_is_scrollviewincontactpage</string>
    <string name="problem_solving_attitude">Problem Solving Attitude</string>
    <string name="your_attitude_is_in_most_areas_of_your_life_the_most_important_factor_in_determining_success_it_s_important_to_stay_positive_and_believe_you_can_overcome_obstacles_this_mindset_will_keep_you_motivated_during_the_tougher_periods_at_work">Your attitude is, in most areas of your life, the most important factor in determining success. It’s important to stay positive and believe you can overcome obstacles. This mindset will keep you motivated during the tougher periods at work.</string>
    <string name="cookingimage">cookingImage</string>
    <string name="_1_cooking">1. Cooking</string>
    <string name="_4_designing">4. Designing</string>
    <string name="_5_basketball">5. Basketball</string>
    <string name="_3_gaming">3. Gaming</string>
    <string name="_2_music">2. Music</string>
    <string name="contact_here">Contact Here</string>
    <string name="phone_no_9848840209">Phone no : 9848840209</string>
    <string name="email_paurakhsaud2019_gmail_com">Email : paurakhsaud2019@gmail.com</string>
    <string name="profilephoto">profilephoto</string>
    <string name="qualification">Qualification</string>
    <string name="gender_male">Gender : Male</string>
    <string name="aishwarya_vidya_niketan">Aishwarya Vidya Niketan</string>
    <string name="_8th">8th</string>
    <string name="_1">1</string>
    <string name="school">School</string>
    <string name="year">Year</string>
    <string name="_class">Class</string>
    <string name="school_">School</string>
    <string name="sn">Sn</string>
    <string name="_2072">2072</string>
    <string name="class_">Class</string>
    <string name="new_don_bosco_academy">New Don Bosco Academy</string>
    <string name="_2075">2075</string>
    <string name="_10th_see">10th/SEE</string>
    <string name="goldengate_int_l_college">GoldenGate Int\'l College</string>
    <string name="_2077">2077</string>
    <string name="_12th_neb">12th/NEB</string>
    <string name="_4">4</string>
    <string name="_2078">2078</string>
    <string name="persuing">Pursuing</string>
    <string name="bsc_it">BSc IT</string>
    <string name="it_is_a_the_readable_content_of_a_page_when_looking_at_its_layout">It is a the readable content of a page when looking at its layout.</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="islington_college">Islington College</string>
    <string name="addbtn">addBtn</string>
    <string name="enter_my_email_given_below">Enter My Email Given Below</string>
    <string name="linkedin">linkedIn</string>
    <string name="github">gitHub</string>
    <string name="twitter">twitter</string>
    <string name="instagram">instagram</string>
    <string name="cookingTxt">Cooking can be a fun and enjoyable hobby for many people and me too. It allows individuals to experiment with different ingredients and flavors, create unique dishes, and learn new cooking techniques.</string>
    <string name="musicTxt">Music is a hobby that involves listening to, creating, or performing music. It can be enjoyed alone or with others and can take many forms, such as playing an instrument, singing, composing, or DJing</string>
    <string name="gmaingTxt">Playing video games as a hobby is a fun and engaging way to pass the time. It allows individuals to immerse themselves in a virtual world and experience a wide range of emotions, from excitement and adrenaline to relaxation and contentment.</string>
    <string name="designTxt">Designing is a hobby that involves creating visual elements such as graphics, logos, websites, and products. It is a form of self-expression that allows individuals to explore their creativity and imagination.</string>
    <string name="basketballTxt">Playing basketball as a hobby can be a fun and active way to spend one\'s free time. It is a team sport that requires physical exertion, quick thinking, and good hand-eye coordination.</string>
    <string name="critialThinkingTxt">Problem solving attitude as a skill refers to the ability to approach challenges and obstacles with a positive mindset and a willingness to find solutions. It involves being proactive, persistent, and resourceful in identifying and addressing issues, as well as being open to new ideas and perspectives.</string>
    <string name="conversactionTxt">This skill includes the ability to listen actively, understand and interpret different perspectives, express oneself clearly and concisely, and navigate social interactions in a respectful and appropriate manner.</string>
    <string name="creativityTxt">Creativity is a skill that involves the ability to generate new and original ideas, concepts, and solutions. It involves thinking outside of the box and coming up with unique perspectives and approaches to problems and challenges.</string>
    <string name="criticalThinkingTxt">Critical thinking is the ability to analyze information, ideas, and arguments in a logical and systematic way. It involves the use of logic and reasoning to evaluate the validity and relevance of information and to make sound judgments and decisions.</string>
    <string name="teamworkTxt">Teamwork is the ability to work effectively with others in a group or team in order to accomplish a common goal. It involves the ability to communicate effectively, delegate tasks, and collaborate on problem-solving and decision-making.</string>
    <string name="javaTxt">Java is a powerful, versatile programming language that is widely used in the development of software applications for various platforms, including desktop, web, and mobile. I used this language most of the time</string>
    <string name="flutterTxt">Flutter is a skill that refers to the ability to develop mobile applications using the Flutter framework. It is a skill that allows developers to create high-performance, visually stunning, and responsive apps for both Android and iOS platforms.</string>
    <string name="htmlTxt">These are the base of my programming skill. For the web development this things are used. I started coding jounrney for these three technologies.</string>
    <string name="SwiftTxt">This language is the official language fot the development of IOS apps in easy and frequent way. This is my favroite language to learn so far.</string>
    <string name="haldline">Unleash my Potential with my Innovative App!</string>
    <string name="skip">SKIP</string>
    <string name="fagTwo">In This app you can find all data about me link my skill, hobbies, my name etc.</string>
    <string name="fragThree">Let explore my app click to done Button</string>
</resources>