<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".IntroFirstFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="431dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/second_image_of_intro"
        android:src="@drawable/ic_hero" />

    <TextView
        android:id="@+id/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/welcome_to_my_application"
        android:textColor="@color/black"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/fagTwo"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="3dp">

        <TextView
            android:id="@+id/Back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|start"
            android:minHeight="48dp"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/secondNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom|end"
            android:minHeight="48dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>